Minor fix to alignment of Zendesk logo for iPad

--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -26,7 +26,7 @@
             position: relative;
 
             @media #{$media-size-phone} {
-                margin-left: -0.8rem;
+                margin-left: 0.8rem;
              }
         }
     }
